Setting up basis for better layout using bootstrap

--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-<h1>Ciao Mondo!</h1>
+<!DOCTYPE html>
+<html lang="en" data-bs-theme="dark">
+    <head>
+        <link href="static/structure/bootstrap/bootstrap.min.css" rel="stylesheet">
+        <link href="static/style.css" rel="stylesheet">
+    </head>
+
+    <body>
+        <nav class="navbar navbar-expand fixed-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="files/logo/colour-icon-square-top.png" width="80">
+                OChameleon
+            </a>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto left-aligned">
+                <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Team
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="https://google.com">Members</a></li>
+                    <li><a class="dropdown-item" href="https://ecosia.com">Attributions</a></li>
+                </ul>
+                </li>
+
+                <li class="nav-item">
+                <a class="nav-link" href="#">Contacts</a>
+                </li>
+            </ul>
+            </div>
+        </div>
+        </nav>
+
+        <script src="static/structure/bootstrap/bootstrap.bundle.min.js"></script>
+    </body>
+</html>
