Testing tab icon

--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
     </head>
 
     <body>
+        <link rel="icon" href="files/logo/colour-icon-square-top.png" type="image/png">
+
         <nav class="navbar navbar-expand fixed-top">
         <div class="container-fluid">
+            <a href="#">
+                <img src="files/logo/colour-icon-square-top.png" class="corner-logo" width="50" alt="Logo">
+            </a>
+
             <a class="navbar-brand" href="#">
-                <img src="files/logo/colour-icon-square-top.png" width="80">
                 OChameleon
             </a>
 
