--- a/index.html
+++ b/index.html
@@ -1,43 +1,7 @@
-<!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
-    <head>
-        <link href="static/structure/bootstrap/bootstrap.min.css" rel="stylesheet">
-        <link href="static/style.css" rel="stylesheet">
+---
+layout: default
+title: Home
+---
 
-        <link rel="icon" href="files/logo/colour-icon-square-top.png" type="image/png">
-    </head>
-
-    <body>
-        <nav class="navbar navbar-expand fixed-top">
-        <div class="container-fluid">
-            <a href="#">
-                <img src="files/logo/colour-icon-square-top.png" class="corner-logo" width="50" alt="Logo">
-            </a>
-
-            <a class="navbar-brand" href="#">
-                OChameleon
-            </a>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto left-aligned">
-                <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Team
-                </a>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="https://google.com">Members</a></li>
-                    <li><a class="dropdown-item" href="https://ecosia.com">Attributions</a></li>
-                </ul>
-                </li>
-
-                <li class="nav-item">
-                <a class="nav-link" href="#">Contacts</a>
-                </li>
-            </ul>
-            </div>
-        </div>
-        </nav>
-
-        <script src="static/structure/bootstrap/bootstrap.bundle.min.js"></script>
-    </body>
-</html>
+<h1>Welcome to My Website</h1>
+<p>This is the homepage built with Jekyll and Bootstrap.</p>
