Setting simple example for starting, hopefully, with jekyll

--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@ layout: default
 title: Home
 ---
 
-<h1>Welcome to My Website</h1>
+<h1>Welcome to OChameleon Website</h1>
 <p>This is the homepage built with Jekyll and Bootstrap.</p>
