Small changes for better layout structure

--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@ title: Home
 ---
 
 <h1>Welcome to the first OChameleon Website</h1>
-<p>This is the homepage built with Jekyll and Bootstrap.</p>
+<p>OChameleon Jekyll and Bootstrap.</p>
