Correcting again spacing of heather

--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@ subtitle: Mucca
 ---
 
 <h1>Welcome to the first OChameleon Website</h1>
-<p>OChameleon Jekyll and Bootstrap.</p>
+<p>Finally Jekyll and Bootstrap.</p>
