--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 ---
 layout: default
 title: Home
-subtitle: Mucca
+subtitle: Welcome to OChameleon
 ---
 
-<h1>Welcome to the first OChameleon Website</h1>
-<p>Finally Jekyll and Bootstrap.</p>
+Bla bla bla
