--- a/contacts.html
+++ b/contacts.html
@@ -4,6 +4,6 @@ title: Contacts
 subtitle: Where you can find us
 ---
 
-<div class="container">
+<div class="container-fluid">
     Bli bli bli
 </div>
