Testing footer on home page

--- a/index.html
+++ b/index.html
@@ -5,5 +5,54 @@ subtitle: Welcome to OChameleon
 ---
 
 <div class="container-fluid">
-    Bla bla bla
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    Bla bla bla <br>
+    
 </div>
