Making header more easy to deal with

--- a/index.html
+++ b/index.html
@@ -5,54 +5,5 @@ subtitle: Welcome to OChameleon
 ---
 
 <div class="container-fluid">
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    Bla bla bla <br>
-    
+    Bla bla bla
 </div>
