--- a/play.html
+++ b/play.html
@@ -4,6 +4,6 @@ title: Playground
 subtitle: Try OChameleon yourself
 ---
 
-<div class="container-fluid">
+<div class="container">
     Boh Boh
 </div>
