--- a/team.html
+++ b/team.html
@@ -4,6 +4,6 @@ title: Team
 subtitle: The people behind the project
 ---
 
-<div class="container-fluid">
+<div class="container">
     Mih Mih Mih
 </div>
