Changing a bit the team page, see what happens

--- a/team.html
+++ b/team.html
@@ -4,6 +4,64 @@ title: Team
 subtitle: The people behind the project
 ---
 
+<div class="container mt-5">
+    <h3>Contributions</h3>
+    <h2>Basic Bootstrap Table</h2>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">People</th>
+                    <th scope="col">Help</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Giulio Caflisch</td>
+                    <td>
+                        ...
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Jessica Belfiore</td>
+                    <td>
+                        ...
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>Francesco Bonaccorsi</td>
+                    <td>...</td>
+                </tr>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>Elena Pennisi</td>
+                    <td>
+                        ...
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td colspan="2">Marouan Mbarek</td>
+                    <td>...</td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td colspan="2">Andreas Compagnoni</td>
+                    <td>...</td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td colspan="2">Francesco Iaria</td>
+                    <td>...</td>
+                </tr>
+            </tbody>
+        </table>
+</div>
+<div class="container-fluid bg-success">
+</div>
 <div class="container">
-    Mih Mih Mih
+    <h3>Attributions</h3>
 </div>
