Correcting nonsense I wrote before

--- a/team.html
+++ b/team.html
@@ -4,9 +4,10 @@ title: Team
 subtitle: The people behind the project
 ---
 
+<!-- <td colspan="2"></td> -->
+
 <div class="container mt-5">
     <h3>Contributions</h3>
-    <h2>Basic Bootstrap Table</h2>
         <table class="table">
             <thead>
                 <tr>
@@ -24,37 +25,37 @@ subtitle: The people behind the project
                     </td>
                 </tr>
                 <tr>
-                    <th scope="row">1</th>
+                    <th scope="row">2</th>
                     <td>Jessica Belfiore</td>
                     <td>
                         ...
                     </td>
                 </tr>
                 <tr>
-                    <th scope="row">2</th>
+                    <th scope="row">3</th>
                     <td>Francesco Bonaccorsi</td>
                     <td>...</td>
                 </tr>
                 <tr>
-                    <th scope="row">1</th>
+                    <th scope="row">4</th>
                     <td>Elena Pennisi</td>
                     <td>
                         ...
                     </td>
                 </tr>
                 <tr>
-                    <th scope="row">3</th>
-                    <td colspan="2">Marouan Mbarek</td>
+                    <th scope="row">5</th>
+                    <td>Marouan Mbarek</td>
                     <td>...</td>
                 </tr>
                 <tr>
-                    <th scope="row">3</th>
-                    <td colspan="2">Andreas Compagnoni</td>
+                    <th scope="row">6</th>
+                    <td>Andreas Compagnoni</td>
                     <td>...</td>
                 </tr>
                 <tr>
-                    <th scope="row">3</th>
-                    <td colspan="2">Francesco Iaria</td>
+                    <th scope="row">7</th>
+                    <td>Francesco Iaria</td>
                     <td>...</td>
                 </tr>
             </tbody>
