--- a/team.html
+++ b/team.html
@@ -18,39 +18,44 @@ subtitle: The people behind the project
             </thead>
             <tbody>
                 <tr>
-                    <th scope="row">1</th>
+                    <th scope="row">0</th>
                     <td>Giulio Caflisch</td>
                     <td>
                         ...
                     </td>
                 </tr>
                 <tr>
-                    <th scope="row">2</th>
+                    <th scope="row">1</th>
                     <td>Jessica Belfiore</td>
                     <td>
                         ...
                     </td>
                 </tr>
                 <tr>
-                    <th scope="row">3</th>
+                    <th scope="row">2</th>
                     <td>Francesco Bonaccorsi</td>
                     <td>...</td>
                 </tr>
                 <tr>
-                    <th scope="row">4</th>
+                    <th scope="row">3</th>
                     <td>Elena Pennisi</td>
                     <td>
                         ...
                     </td>
                 </tr>
                 <tr>
-                    <th scope="row">5</th>
+                    <th scope="row">4</th>
                     <td>Marouan Mbarek</td>
                     <td>...</td>
                 </tr>
                 <tr>
-                    <th scope="row">6</th>
+                    <th scope="row">5</th>
                     <td>Andreas Compagnoni</td>
+                    <td>...</td>
+                </tr>
+                <tr>
+                    <th scope="row">6</th>
+                    <td>Giulio Leonardi</td>
                     <td>...</td>
                 </tr>
                 <tr>
