Team page updated for description of work done by Marouan and Elena

--- a/team.html
+++ b/team.html
@@ -13,7 +13,7 @@ subtitle: The people behind the project
                 <tr>
                     <th scope="col">#</th>
                     <th scope="col">People</th>
-                    <th scope="col">Help</th>
+                    <th scope="col">Works Done</th>
                 </tr>
             </thead>
             <tbody>
@@ -40,13 +40,15 @@ subtitle: The people behind the project
                     <th scope="row">3</th>
                     <td>Elena Pennisi</td>
                     <td>
-                        ...
+                        Drawing the logo and suggesting the name of the project as a sort of combination of OCaml and Lean.
                     </td>
                 </tr>
                 <tr>
                     <th scope="row">4</th>
                     <td>Marouan Mbarek</td>
-                    <td>...</td>
+                    <td>
+                        Suggesting to use OCaml both as an inspiration and for writing the compiler and interpreter.
+                    </td>
                 </tr>
                 <tr>
                     <th scope="row">5</th>
