Every member has a simple description

--- a/team.html
+++ b/team.html
@@ -21,26 +21,32 @@ subtitle: The people behind the project
                     <th scope="row">0</th>
                     <td>Giulio Caflisch</td>
                     <td>
-                        ...
+                        Creator of the idea.
+                        <br>
+                        Coding the VS Code extesion, the wiki and part of the compiler.
+                        <br>
+                        Modifying Monocode font to become Monomath.
                     </td>
                 </tr>
                 <tr>
                     <th scope="row">1</th>
                     <td>Jessica Belfiore</td>
                     <td>
-                        ...
+                        Managing Giulio's mental health with care and professionality.
                     </td>
                 </tr>
                 <tr>
                     <th scope="row">2</th>
                     <td>Francesco Bonaccorsi</td>
-                    <td>...</td>
+                    <td>
+                        Helping Giulio in the theoretical and applied parts considering analogies between ideas, of both himself and Giulio, in correspondence between mathematical science and computational science.
+                    </td>
                 </tr>
                 <tr>
                     <th scope="row">3</th>
                     <td>Elena Pennisi</td>
                     <td>
-                        Drawing the logo and suggesting the name of the project as a sort of combination of OCaml and Lean.
+                        Drawing the logo and suggesting the name of the project as a cool combination of OCaml and LEAN.
                     </td>
                 </tr>
                 <tr>
@@ -53,17 +59,23 @@ subtitle: The people behind the project
                 <tr>
                     <th scope="row">5</th>
                     <td>Andreas Compagnoni</td>
-                    <td>...</td>
+                    <td>
+                        Suggesting cool mathematical notation ideas.
+                    </td>
                 </tr>
                 <tr>
                     <th scope="row">6</th>
                     <td>Giulio Leonardi</td>
-                    <td>...</td>
+                    <td>
+                        Suggesting to look into deep learning, supervised and unsupervised.
+                    </td>
                 </tr>
                 <tr>
                     <th scope="row">7</th>
                     <td>Francesco Iaria</td>
-                    <td>...</td>
+                    <td>
+                        Noticing some downsides in the narrative and simplicity of Giulio's original design.
+                    </td>
                 </tr>
             </tbody>
         </table>
