Improving description of work done by others

--- a/team.html
+++ b/team.html
@@ -39,14 +39,15 @@ subtitle: The people behind the project
                     <th scope="row">2</th>
                     <td>Francesco Bonaccorsi</td>
                     <td>
-                        Helping Giulio in the theoretical and applied parts considering analogies between ideas, of both himself and Giulio, in correspondence between mathematical science and computational science.
+                        Helping Giulio in the theoretical and applied parts considering analogies, of both himself and others, of correspondence between mathematical science and computational science.
                     </td>
                 </tr>
                 <tr>
                     <th scope="row">3</th>
                     <td>Elena Pennisi</td>
                     <td>
-                        Drawing the logo and suggesting the name of the project as a cool combination of OCaml and LEAN.
+                        Suggesting the name of the project as a cool combination of OCaml and LEAN.
+                        Drawing the different versions of the logo.
                     </td>
                 </tr>
                 <tr>
@@ -60,7 +61,7 @@ subtitle: The people behind the project
                     <th scope="row">5</th>
                     <td>Andreas Compagnoni</td>
                     <td>
-                        Suggesting cool mathematical notation ideas.
+                        Suggesting interesting mathematical concepts and notation ideas unrelated to computational mathematics or mathematical computations.
                     </td>
                 </tr>
                 <tr>
@@ -74,7 +75,7 @@ subtitle: The people behind the project
                     <th scope="row">7</th>
                     <td>Francesco Iaria</td>
                     <td>
-                        Noticing some downsides in the narrative and simplicity of Giulio's original design.
+                        Noticing some downsides in the narrative and understandability of Giulio's original design.
                     </td>
                 </tr>
             </tbody>
