--- a/team.html
+++ b/team.html
@@ -6,7 +6,7 @@ subtitle: The people behind the project
 
 <!-- <td colspan="2"></td> -->
 
-<div class="container mt-5">
+<div class="container m-3">
     <h3>Contributions</h3>
         <table class="table">
             <thead>
@@ -81,8 +81,7 @@ subtitle: The people behind the project
             </tbody>
         </table>
 </div>
-<div class="container-fluid m-5 bg-success">
+<div class="container-fluid m-3 p-3 bg-success">
 </div>
-<div class="container">
     <h3>Attributions</h3>
 </div>
