Changing m- to my-, so margin only in y direction. Making menu as container instead of container-fluid

--- a/contacts.html
+++ b/contacts.html
@@ -4,6 +4,6 @@ title: Contacts
 subtitle: Where you can find us
 ---
 
-<div class="container m-3">
+<div class="container my-3">
     Bli bli bli
 </div>
