--- a/play.html
+++ b/play.html
@@ -4,6 +4,6 @@ title: Playground
 subtitle: Try OChameleon yourself
 ---
 
-<div class="container m-3">
+<div class="container my-3">
     Boh Boh
 </div>
