--- a/documentation.html
+++ b/documentation.html
@@ -4,6 +4,6 @@ title: Documentation
 subtitle: Learn OChameleon
 ---
 
-<div class="container m-3">
+<div class="container my-3">
     Mah Mah
 </div>
