--- a/team.html
+++ b/team.html
@@ -6,7 +6,7 @@ subtitle: The people behind the project
 
 <!-- <td colspan="2"></td> -->
 
-<div class="container m-3">
+<div class="container my-3">
     <h3>Contributions</h3>
         <table class="table">
             <thead>
@@ -81,7 +81,6 @@ subtitle: The people behind the project
             </tbody>
         </table>
 </div>
-<div class="container-fluid m-3 p-3 bg-success">
-</div>
+<div class="container my-3">
     <h3>Attributions</h3>
 </div>
