--- a/team.html
+++ b/team.html
@@ -19,13 +19,26 @@ subtitle: The people behind the project
             <tbody>
                 <tr>
                     <th scope="row">0</th>
-                    <td>Giulio Caflisch</td>
+                    <td>Giulio Caflisch, Francesco Bonaccorsi</td>
                     <td>
                         Creator of the idea.
                         <br>
-                        Coding the VS Code extesion, the wiki and part of the compiler.
+                        First mathematical scientist and second computational scientist. Working on the syntax and the semantics of the analogies between formal sciences.
+                        <br>
+                        Coding parts of the compiler, the VS Code extesion and the wiki.
                         <br>
                         Modifying Monocode font to become Monomath.
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>Francesco Bonaccorsi</td>
+                    <td>
+                        Helper of the idea.
+                        <br>
+                        First computational scientist and second mathematical scientist. Working on the syntax and the semantics of the analogies between formal sciences.
+                        <br>
+                        Structuring the majority and coding the other part of the compiler.
                     </td>
                 </tr>
                 <tr>
@@ -33,13 +46,6 @@ subtitle: The people behind the project
                     <td>Jessica Belfiore</td>
                     <td>
                         Managing Giulio's mental health with care and professionality.
-                    </td>
-                </tr>
-                <tr>
-                    <th scope="row">2</th>
-                    <td>Francesco Bonaccorsi</td>
-                    <td>
-                        Helping Giulio in the theoretical and applied parts considering analogies, of both himself and others, of correspondence between mathematical science and computational science.
                     </td>
                 </tr>
                 <tr>
