--- a/team.html
+++ b/team.html
@@ -19,7 +19,7 @@ subtitle: The people behind the project
             <tbody>
                 <tr>
                     <th scope="row">0</th>
-                    <td>Giulio Caflisch, Francesco Bonaccorsi</td>
+                    <td>Giulio Caflisch</td>
                     <td>
                         Creator of the idea.
                         <br>
@@ -31,7 +31,7 @@ subtitle: The people behind the project
                     </td>
                 </tr>
                 <tr>
-                    <th scope="row">2</th>
+                    <th scope="row">1</th>
                     <td>Francesco Bonaccorsi</td>
                     <td>
                         Helper of the idea.
@@ -42,7 +42,7 @@ subtitle: The people behind the project
                     </td>
                 </tr>
                 <tr>
-                    <th scope="row">1</th>
+                    <th scope="row">2</th>
                     <td>Jessica Belfiore</td>
                     <td>
                         Managing Giulio's mental health with care and professionality.
